external-crates/move/crates/move-compiler/tests/move_check/parser/missing_angle_brace_close.exp
error[E03006]: unexpected name in this position
  ┌─ tests/move_check/parser/missing_angle_brace_close.move:3:17
  │
3 │         let x = t<u64;
  │                 ^^^^^ Expected name to be followed by a brace-enclosed list of field expressions or a parenthesized list of arguments for a function call

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/missing_angle_brace_close.move:3:22
  │
3 │         let x = t<u64;
  │                  -   ^ Expected '>'
  │                  │    
  │                  To match this '<'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/missing_angle_brace_close.move:3:22
  │
3 │         let x = t<u64;
  │                      ^
  │                      │
  │                      Unexpected ';'
  │                      Expected ','

